After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 748206 - Printer list in "Add Printer" dialog is not focusable only with keyboard.
Printer list in "Add Printer" dialog is not focusable only with keyboard.
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Printers
3.16.x
Other Linux
: Normal normal
: ---
Assigned To: Marek Kašík
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-04-20 18:37 UTC by chris
Modified: 2015-06-10 09:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot of the dialog (19.52 KB, image/png)
2015-04-20 18:37 UTC, chris
  Details
Set focus of the 'New printer dialog' correctly (1.19 KB, patch)
2015-05-28 14:48 UTC, Marek Kašík
committed Details | Review
Fix focus chain of the 'New printer dialog' (2.13 KB, patch)
2015-05-28 14:48 UTC, Marek Kašík
committed Details | Review
Install selected printer when the row is activated (1.75 KB, patch)
2015-05-28 14:49 UTC, Marek Kašík
committed Details | Review

Description chris 2015-04-20 18:37:30 UTC
Created attachment 302019 [details]
Screenshot of the dialog

Dear developers,

i try to add an printer with the gcc. i cannot navigate to the printerlist just with the keyboard. i tried tab/ ctrl + tab and the arrow keys (and some other things). i m blind. so i cant use the mouse. sighted people tells me that my printer is shown in that list. i m just unable to navigate to the printer list (shown in the screenshot). after pressing alt + tab it seems to be focused but it is not. after klicking on the printer list orca is just able to say "icon"

reproduce:
1. open gcc -> printer
2. press "add"
3. try to navigate to printer list
Comment 1 Marek Kašík 2015-05-28 14:48:06 UTC
Created attachment 304176 [details] [review]
Set focus of the 'New printer dialog' correctly

This patch calls gtk_widget_show_all() on the 'New printer dialog' after setting transient parent for it so that the warning about missing transient parent is not shown to the user and the dialog is correctly focused.
Comment 2 Marek Kašík 2015-05-28 14:48:50 UTC
Created attachment 304178 [details] [review]
Fix focus chain of the 'New printer dialog'

This one disables 'can-focus' for widgets which don't need that in the 'New printer dialog'. This fixes focus chain for me.
Comment 3 Marek Kašík 2015-05-28 14:49:59 UTC
Created attachment 304179 [details] [review]
Install selected printer when the row is activated

And this one allows user to install printer by activating a row with a device.
Comment 4 Rui Matos 2015-06-09 16:04:52 UTC
Review of attachment 304176 [details] [review]:

ok
Comment 5 Rui Matos 2015-06-09 16:19:36 UTC
Review of attachment 304179 [details] [review]:

looks fine
Comment 6 Rui Matos 2015-06-09 16:20:03 UTC
Review of attachment 304178 [details] [review]:

looks good
Comment 7 Marek Kašík 2015-06-10 09:40:18 UTC
Thank you for the review. I've pushed the patches to master and the first 2 patches also to 3.16 branch (the third one is kind of feature).
I'm closing this as fixed.